// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blockquote extra tag renders the tag "> [color=#f00] text" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <blockquote
    style="border-left-color: #f00;"
  >
    

    <p>
       text
    </p>
    

  </blockquote>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[=value]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    [=value]
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[color=#abcdef]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    <span>
      [color=
      #abcdef
      ]
    </span>
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[color=#dfe]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    <span>
      [color=
      #dfe
      ]
    </span>
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[color=]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    [color=]
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[color=notarealcolor]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    <span>
      [color=
      notarealcolor
      ]
    </span>
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[color=white]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    <span>
      [color=
      white
      ]
    </span>
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[key=]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    [key=]
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[key]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    [key]
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[name=]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    [name=]
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[name=giowehg]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    <span
      class="blockquote-extra"
    >
      giowehg
    </span>
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[time=]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    [time=]
  </p>
  

</div>
`;

exports[`blockquote extra tag renders the tag "[time=tomorrow]" correctly 1`] = `
<div>
  <p>
    blockquote
  </p>
  

  <p>
    <span
      class="blockquote-extra"
    >
      tomorrow
    </span>
  </p>
  

</div>
`;
